--- a/model/hiring.ipynb
+++ b/model/hiring.ipynb
@@ -1309,7 +1309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('venv': venv)",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1328,7 +1328,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9c935a573639085cd41d044eb49f03b1ff6a5597ab0a1eb6aaa3ff96038ea71f"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
